objects/ScCollection_Status_Counter_Settings__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>created to manage mapping from updating counter in contractSetting object.</description>
    <fields>
        <fullName>ScCollection_Checkbox_Field_Api_Name__c</fullName>
        <label>Field API Name(If Checkbox)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ScCollection_Counter_Field_Api_Name__c</fullName>
        <label>Field API Name(If Counter)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ScCollection_Date_Field_Api_Name__c</fullName>
        <label>Values to be set</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ScCollection_Include__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Include</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ScCollection_Object_Api_Name__c</fullName>
        <label>Object Api Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ScCollection_Values__c</fullName>
        <label>Values to be verify</label>
        <type>TextArea</type>
    </fields>
    <label>Status Counter Settings</label>
</CustomObject>